@@ -1,6 +1,6 @@
 {
   "name": "nuklear",
-  "version": "4.02.1",
+  "version": "4.02.2",
   "repo": "Immediate-Mode-UI/Nuklear",
   "description": "A small ANSI C gui toolkit",
   "keywords": ["gl", "ui", "toolkit"],
